RPP: fix bad dark mode hover state on 3P Insight
Light mode: https://screenshot.googleplex.com/ACdvQHRkH67UWWC

Dark mode: https://screenshot.googleplex.com/SPTarX2SCG4n4g7

Fixed: 382180478
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/6070378
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Connor Clark <cjamcl@chromium.org>

--- a/front_end/panels/timeline/components/insights/table.css
+++ b/front_end/panels/timeline/components/insights/table.css
@@ -28,7 +28,7 @@ table.interactive tbody tr {
 
 table.interactive tbody tr:hover,
 table.interactive tbody tr.selected {
-  background-color: var(--app-color-performance-sidebar-table-row-hover);
+  background-color: var(--sys-color-state-hover-on-subtle);
 }
 
 table thead th {
