--- a/front_end/ui/legacy/themeColors.css
+++ b/front_end/ui/legacy/themeColors.css
@@ -376,7 +376,6 @@
   --app-color-performance-sidebar-time-range: var(--ref-palette-pink60);
   --app-color-performance-sidebar-label-text-dark: var(--ref-palette-neutral10);
   --app-color-performance-sidebar-label-text-light: var(--ref-palette-neutral100);
-  --app-color-performance-sidebar-table-row-hover: #f0f3f9;
 
   /**
    * Colors for cards.
